# msds_mlops

./: .dockerignore  .gitignore  Dockerfile  README.md  cloud_cost_est.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml  tests.yml
app/: __init__.py  audit.py  listing_fields.py  main.py  model_loader.py  ranker.py  rent_predictor.py  schemas.py
data/: test.ipynb
data/processed/: listings_clean.csv
data/scraped/: craigslist_state.json  scrape_state.json  sf_apartments_listings.csv  sf_apartments_listings_clean.csv  sf_apartments_listings_combined.csv  sf_craigslist_listings.csv
demo/: conformal_calibration.json  example_listings.json  listings_for_rank.json  scored_listings.csv
docs/: cicd.md  model_card.md
notebooks/: 01_eda.ipynb
scrape/: auto_scrape.sh  scrape_apartments_sf.py  scrape_craigslist_sf.py  scrape_detail_pages.py
scripts/: build_demo_examples.py  build_listings_features.py  build_rank_listings.py  clean_combined_listings.py  conformal_calibrate.py  data_cleaning.py  enrich_crime_features.py  fetch_census.py  fetch_sf_crime.py  fetch_walkscore.py  mlflow_team_example.py  register_mlflow_placeholder.py  train_rent_predictor.py  upload_to_gcs.py
scripts/data_cleaning/: __init__.py  __main__.py  constants.py  (+8 more)
tests/: conftest.py  test_app_main.py  test_crime.py  test_data_cleaning.py  test_enrich_crime_features.py  test_fetch_census.py  test_fetch_walkscore.py  test_model_loader.py  test_ranker.py  test_scrape_detail_pages.py  test_sf_apartments_csv.py
web/: app.js  index.html  styles.css
